--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
     "tw-animate-css": "^1.3.5",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
-    "vite": "^7.0.4"
+    "vite": "^7.0.4",
+    "vite-plugin-inspect": "^11.3.2"
   }
 }
