--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -1,8 +1,9 @@
-name: golangci-lint
+name: backend-lint-with-frontend-build
 
 on:
   pull_request:
     paths:
+      - 'frontend/**'
       - 'backend/**'
       - '.github/workflows/golangci-lint.yml'
   workflow_dispatch: {}
@@ -12,16 +13,40 @@ permissions:
   pull-requests: read
 
 concurrency:
-  group: lint-${{ github.ref }}
+  group: lint-with-frontend-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
-  lint:
+  build-frontend:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: backend
+        working-directory: frontend
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
+      - name: Set up Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 'lts/*'
+          cache: npm
+          cache-dependency-path: frontend/package-lock.json
+
+      - name: Install deps
+        run: npm ci
+
+      - name: Build frontend into backend/cmd/app/dist
+        run: npm run build-back
+
+  lint-backend:
+    runs-on: ubuntu-latest
+    needs: build-frontend
+    defaults:
+      run:
+        working-directory: backend
     steps:
       - name: Checkout
         uses: actions/checkout@v5
@@ -34,7 +59,7 @@ jobs:
           go-version-file: backend/go.mod
           check-latest: true
 
-      - name: Cache Go build & mod for backend module
+      - name: Cache Go build & mod
         uses: actions/cache@v4
         with:
           path: |
@@ -44,10 +69,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-go-
 
-      - name: Run golangci-lint on backend/
+      - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v8
         with:
           version: latest
           working-directory: backend
           args: --timeout=5m
-          # only-new-issues: true  # uncomment if you want PR-only issues
+          # only-new-issues: true
