--- a/.github/workflows/build-verify.yml
+++ b/.github/workflows/build-verify.yml
@@ -32,11 +32,15 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 'lts/*'
-          cache: npm
-          cache-dependency-path: frontend/package-lock.json
-
+          cache: pnpm
+          cache-dependency-path: frontend/pnpm-lock.yaml
+      - name: Install pnpm
+        run: npm install -g pnpm
       - name: Install deps
-        run: npm ci
+        run: pnpm install --frozen-lockfile
+
+      - name: Build frontend into backend/cmd/app/dist
+        run: pnpm run build-back
 
       # Your "build" script already does: `tsc -b && vite build`
       # So this fails the PR on type or build errors.
