try to fix pnpm not being on path

--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -35,7 +35,7 @@ jobs:
           cache: pnpm
           cache-dependency-path: frontend/pnpm-lock.yaml
       - name: Install pnpm
-        run: npm install -g pnpm@9
+        run: corepack enable && corepack prepare pnpm@latest --activate
       - name: Install deps
         run: pnpm install --frozen-lockfile
 
