--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -27,15 +27,15 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
+      - uses: pnpm/action-setup@v4
+        with:
+          version: latest
       - name: Set up Node
         uses: actions/setup-node@v4
         with:
           node-version: 'lts/*'
           cache: pnpm
           cache-dependency-path: frontend/pnpm-lock.yaml
-      - name: Install pnpm
-        run: corepack enable && corepack prepare pnpm@latest --activate
       - name: Install deps
         run: pnpm install --frozen-lockfile
 
