--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -17,14 +17,14 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build-frontend:
+  build-and-lint-backend:
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: frontend
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
         with:
           fetch-depth: 0
       - uses: pnpm/action-setup@v4
@@ -41,18 +41,6 @@ jobs:
 
       - name: Build frontend into backend/cmd/app/dist
         run: pnpm run build-back
-
-  lint-backend:
-    runs-on: ubuntu-latest
-    needs: build-frontend
-    defaults:
-      run:
-        working-directory: backend
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v5
-        with:
-          fetch-depth: 0
 
       - name: Set up Go (from backend/go.mod)
         uses: actions/setup-go@v5
