--- a/.github/workflows/build-verify.yml
+++ b/.github/workflows/build-verify.yml
@@ -24,18 +24,18 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
         with:
           fetch-depth: 0
-
+      - uses: pnpm/action-setup@v4
+        with:
+          version: latest
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 'lts/*'
           cache: pnpm
           cache-dependency-path: frontend/pnpm-lock.yaml
-      - name: Install pnpm
-        run: npm install -g pnpm
       - name: Install deps
         run: pnpm install --frozen-lockfile
 
