--- a/.github/workflows/build-verify.yml
+++ b/.github/workflows/build-verify.yml
@@ -40,7 +40,7 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Build frontend into backend/cmd/app/dist
-        run: pnpm run build-back
+        run: pnpm run build
 
       # Your "build" script already does: `tsc -b && vite build`
       # So this fails the PR on type or build errors.
