--- a/.github/workflows/build-verify.yml
+++ b/.github/workflows/build-verify.yml
@@ -24,23 +24,23 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
         with:
           fetch-depth: 0
-
+      - uses: pnpm/action-setup@v4
+        with:
+          version: latest
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 'lts/*'
           cache: pnpm
           cache-dependency-path: frontend/pnpm-lock.yaml
-      - name: Install pnpm
-        run: npm install -g pnpm
       - name: Install deps
         run: pnpm install --frozen-lockfile
 
       - name: Build frontend into backend/cmd/app/dist
-        run: pnpm run build-back
+        run: pnpm run build
 
       # Your "build" script already does: `tsc -b && vite build`
       # So this fails the PR on type or build errors.
