fix linter errors and only run backend unit test when code is pushed into it

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,6 +1,14 @@
 name: Build and Test
 
 on:
+  push:
+    paths:
+      - 'backend/**'
+      - '.github/workflows/build-and-test.yml'
+  pull_request:
+    paths:
+      - 'backend/**'
+      - '.github/workflows/build-and-test.yml'
   workflow_call:
 
 jobs:
