--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,10 +1,6 @@
 name: Build and Test
 
 on:
-  push:
-    paths:
-      - 'backend/**'
-      - '.github/workflows/build-and-test.yml'
   pull_request:
     paths:
       - 'backend/**'
@@ -14,16 +10,20 @@ on:
 jobs:
   run-tests:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: backend
     steps:
       - uses: actions/checkout@v5
 
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
+          go-version-file: backend/go.mod
           go-version: 1.24
 
       - name: Build
-        run: go build -v ./backend/...
+        run: go build -v ./...
 
       - name: Test
-        run: go test -v ./backend/...
+        run: go test -v ./...
