use a mocked dist directory to try to fix unit tests runs

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
       - uses: actions/checkout@v5
 
+      - name: Stub dist for embed
+        run: mkdir -p backend/cmd/app/dist
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
