--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -15,11 +15,6 @@ jobs:
         working-directory: backend
     steps:
       - uses: actions/checkout@v5
-
-      - name: Stub dist for embed
-        run: |
-          mkdir -p backend/cmd/app/dist
-          echo '<!doctype html><title>stub</title>' > backend/cmd/app/dist/index.html
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
@@ -27,4 +22,7 @@ jobs:
           go-version: 1.24
 
       - name: Test
-        run: go test -v ./...
+        run: |
+          set -e
+          pkgs=$(go list ./... | grep -v '/cmd/')
+          [ -n "$pkgs" ] && go test -v $pkgs
