--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -22,6 +22,7 @@ jobs:
           go-version: 1.24
 
       - name: Test
+        working-directory: backend
         run: |
           set -e
           pkgs=$(go list ./... | grep -v '/cmd/')
