--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -15,15 +15,21 @@ jobs:
         working-directory: backend
     steps:
       - uses: actions/checkout@v5
+
+      - name: Stub dist for embed
+        run: |
+          mkdir -p cmd/app/dist
+          echo '<!doctype html><title>stub</title>' > cmd/app/dist/index.html
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version-file: backend/go.mod
-          go-version: 1.24
+          cache: true
+          cache-dependency-path: backend/go.sum
+
+      - name: Build
+        run: go build -v ./...
 
       - name: Test
         working-directory: backend
-        run: |
-          set -e
-          pkgs=$(go list ./... | grep -v '/cmd/')
-          [ -n "$pkgs" ] && go test -v $pkgs
+        run: go test -v ./...
