fix linter to work with a mock frontend

--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -1,9 +1,8 @@
-name: backend-lint-with-frontend-build
+name: backend-lint
 
 on:
   pull_request:
     paths:
-      - 'frontend/**'
       - 'backend/**'
       - '.github/workflows/golangci-lint.yml'
   workflow_dispatch: {}
@@ -12,35 +11,20 @@ permissions:
   contents: read
   pull-requests: read
 
-concurrency:
-  group: lint-with-frontend-${{ github.ref }}
-  cancel-in-progress: true
-
 jobs:
   build-and-lint-backend:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: frontend
+        working-directory: backend
     steps:
       - name: Checkout
         uses: actions/checkout@v5
-        with:
-          fetch-depth: 0
-      - uses: pnpm/action-setup@v4
-        with:
-          version: latest
-      - name: Set up Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 'lts/*'
-          cache: pnpm
-          cache-dependency-path: frontend/pnpm-lock.yaml
-      - name: Install deps
-        run: pnpm install --frozen-lockfile
 
-      - name: Build frontend into backend/cmd/app/dist
-        run: pnpm run build-back
+      - name: Stub dist for embed
+        run: |
+          mkdir -p cmd/app/dist
+          echo '<!doctype html><title>stub</title>' > cmd/app/dist/index.html
 
       - name: Set up Go (from backend/go.mod)
         uses: actions/setup-go@v5
