secure even more the docker build, fix some typos and bump rate limiting to 50 per second

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,9 +1,10 @@
 {
   "name": "frontend",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
+    "dependencies": "pnpm install --frozen-lockfile",
     "dev": "vite --host 0.0.0.0 --port 5173",
     "build": "tsc -b && vite build ",
     "build-back": "tsc -b && vite build --outDir ../backend/cmd/app/dist --emptyOutDir",
@@ -59,5 +60,6 @@
     "vite": "^7.0.4",
     "vite-plugin-inspect": "^11.3.2",
     "vitest": "^3.2.4"
-  }
+  },
+  "packageManager": "pnpm@10.16.1"
 }
